# PHY607-2nd-Project

./: Brownian_motion_Tanya_Prakriti.py  Project2witherror.py  README.md
brownian_motion_pkg/: README.md  __main__.py  pyproject.toml
brownian_motion_pkg/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
brownian_motion_pkg/src/brownian_motion_sim/: _inti_.py
brownian_motion_pkg/src/brownian_motion_sim.egg-info/: PKG-INFO  SOURCES.txt
brownian_motion_pkg/src/brownian_motion_sim/analysis/: error_analysis.py
brownian_motion_pkg/src/brownian_motion_sim/core/: _init_.py  sampling.py
brownian_motion_pkg/src/brownian_motion_sim/visualization/: _init_.py  plotters.py
brownian_motion_pkg/tests/: _init_.py  test_error_analysis.py  test_sampling.py  test_simulation.py
brownian_motion_pkg/venv_brownian/: pyvenv.cfg
brownian_motion_pkg/venv_brownian/Scripts/: activate  activate.bat
