[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brownian_motion_sim"
version = "0.1.0"
description = "A package for simulating Brownian motion"
authors = [
    { name = "Tanya Chhabra", email = "tachhabr@syr.edu" },
    { name = "Prakriti Singh", email = "psingh39@syr.edu" },
    { name = "Carlos Enrique Moguel-Lehmer", email = "cmoguell@syr.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
